{{$NEXT}}

3.1.0  2022-08-22T18:02:43-05:00
    - Export 'ask' as an alias for routine 'prompt

3.0.6  2022-06-04T16:48:15-05:00
    - Update dependency on Font::AFM updated version
    - REALLY remove dependency on Test::META    

3.0.5  2022-06-04T10:16:53-05:00
    - Remove dependency on Test::META

3.0.4  2022-01-12T21:19:25-06:00
    - Update minimum version required of Font::AFM

3.0.3  2021-12-10T18:36:51-06:00
    - Publish to Zef repository
    - add alias 'normalize-text' for 'normalize-string'
      + add test for the alias
    - add sub 'typeset-text' for the equivalent signature but 
      deprecated multi subs 'wrap-text' and 'wrap-para'
      + the new sub has more named params
      + add test for 'typeset-text'
    - add alias 'typeset-string' for 'typeset-text'
      + add test for the alias
    - add alias 'typeset-line' for 'typeset-text'
      + add test for the alias
    - improve documentation
    - correct typos in docs

3.0.2  2021-01-28T18:15:26-06:00
    - add new multi sub 'wrap-text'
      + provides text wrapping for max line width
        for a PostScript or PDF font at
        a desired font size
      + input is a text string or a list of
        words
      + added an 'AFM-font' class to wrap a font and
        font size along with convenience 
        methods and attributes
      + added tests for the AFM-font class
      + added a rudimentary test for the two subs
    - add a multi sub 'wrap-paragraph' that
      takes a text string in addition to a
      list of words
    - added new classes for future use:
      + class BBox
      +class Line
      +class Para
    - miscellanous doc and formatting updates

3.0.1  2021-01-15T12:45:02-06:00
    - update copyright year

3.0.0  2021-01-15T12:41:49-06:00
    - bumped api to 3
    - correct edition number of Perl Cookbook referenced
    - removed two deprecated routines:
      + 'strip-comment' with optional second arg as comment char